--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "gray-matter": "^4.0.3",
+    "marked": "^9.1.0",
+    "next": "latest",
+    "qs": "^6.11.2",
     "react": "latest",
     "react-dom": "latest",
-    "next": "latest"
+    "server-only": "^0.0.1",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "latest",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.4",
     "postcss": "latest",
-    "tailwindcss": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest"
+    "tailwindcss": "latest"
   }
 }
